added timeline header

--- a/_notes/Encounters/202204162314 - The Skath Hunt.md
+++ b/_notes/Encounters/202204162314 - The Skath Hunt.md
@@ -21,4 +21,5 @@ menu: Encounters
 - Head over to [[Three Flag Sailing]], it's bumping and send [[Zassteeah Zass Maryis]] in to find out specifically where [[Captain Skath]] lives
 - [[Ethen Ma Yarlberl]] pointed us to where [[Captain Skath]] lives
 
+**Timeline**
  [[202204162240 - Zaas and Naerth Discussion]] <--> [[202204232033 - Skaths House Investigation]]
