--- a/_notes/Encounters/202206112113 - Verbeeg Lair.md
+++ b/_notes/Encounters/202206112113 - Verbeeg Lair.md
@@ -37,4 +37,4 @@ Find [[Captain Skath]] and the [[Verbeeg]]
 - We ready for an ambush on [[Captain Skath]]
 
 **Timeline**
- <--> 
+ [[202205072228 - Approaching Fef the Trapper]] <--> [[202206182149 - Ambush Skath]]
