--- a/_notes/Encounters/202206112113 - Verbeeg Lair.md
+++ b/_notes/Encounters/202206112113 - Verbeeg Lair.md
@@ -1,6 +1,6 @@
 ---
 title: "Encounter: Verbeeg Lair"
-tags: [encounter]
+tags: [encounter, timeline]
 menu: Encounters
 ---
 **Objective:** 
@@ -38,3 +38,5 @@ Find [[Captain Skath]] and the [[Verbeeg]]
 
 **Timeline**
  [[202205072228 - Approaching Fef the Trapper]] <--> [[202206182149 - Ambush Skath]]
+
+<span class='ob-timelines' data-date='1512-03-28-00' data-title="Verbeeg Lair"></span>
