--- a/_notes/Encounters/202206182149 - Ambush Skath.md
+++ b/_notes/Encounters/202206182149 - Ambush Skath.md
@@ -1,6 +1,6 @@
 ---
 title: "Encounter: Ambush Skath"
-tags: [encounter]
+tags: [encounter, timeline]
 menu: Encounters
 ---
 **Objective:** 
@@ -32,3 +32,5 @@ Ambush [[Captain Skath]]
 
 **Timeline**
  [[202206112113 - Verbeeg Lair]] <--> [[202207022143 - Chasing Skath]]
+
+<span class='ob-timelines' data-date='1513-03-28-00' data-title="Ambush Skath"></span>
