--- a/_notes/Encounters/202207022143 - Chasing Skath.md
+++ b/_notes/Encounters/202207022143 - Chasing Skath.md
@@ -1,6 +1,6 @@
 ---
 title: "Encounter: Chasing Skath"
-tags: [encounter]
+tags: [encounter, timeline]
 menu: Encounters
 ---
 **Objective:** 
@@ -8,7 +8,7 @@ menu: Encounters
 Catch [[Captain Skath]]
 
 **Encounter:**
-- [[Sulk]] hits withs a javelin at [[Captain Skath]]
+- [[Sulk]] hits with a javelin at [[Captain Skath]]
 - [[Sam Slippy Robbins]] manages to gain most of the ground on [[Captain Skath]]
 - [[Sulk]] got downed
 - [[Sam Slippy Robbins]] gets poisoned and takes a fair amount of damage
@@ -19,7 +19,7 @@ Catch [[Captain Skath]]
 
 He had
 - Crossbow
-- Poisoned Bolts x5 1d6+4 piercing DC 13 CON poisoned for an hour, if that save fails by 5+ the target is also unconcsious shaken or damaged
+- Poisoned Bolts x5 1d6+4 piercing DC 13 CON poisoned for an hour, if that save fails by 5+ the target is also unconscious shaken or damaged
 - Studded Leather Armor
 - Shield
 - [[Boots of the Winterlands]]
@@ -28,6 +28,41 @@ Conversation between [[Zassteeah Zass Maryis|Zaas]] and [[Raphael King Ambrosius
 
 [[Zassteeah Zass Maryis|Zaas]] i got me some help
 [[Raphael King Ambrosius Costeau|King]] from home
+
+[[Raphael King Ambrosius Costeau|King]] goes to sleep and dreams of home and hears renaissance music
+	- See 2 hulking figures in his house
+	- Parents no where to be found
+	- Someone sitting in his father's chair
+		- Welcome home Cousteau
+		- Mademoiselle where are my parents
+	- Parents are sick
+	- mademoiselle 'ignoring the people' per [[Raphael King Ambrosius Costeau|King]]
+	- 'Everyone in town is sick, what are you doing'
+		- It's all for the common good
+	- "I thought I got out"
+		- Maybe released
+
+[[Raphael King Ambrosius Costeau|King]]'s parents walk in and embrace him. They seem to be completely healthy
+
+"See, perfect pictures of health" - mademoiselle
+
+[[Jacqueline]] is mademoiselle.
+
+Both parents let out a scream, hair starts popping out of their forearms, they have lycanthropy, wererats
+
+Dream continues after [[Raphael King Ambrosius Costeau|King]] is assaulted by his parents in wererat form and the [[Silent Helm]]s
+
+He transports to [[Castile Renee]] in the dream
+
+[[Raphael King Ambrosius Costeau|King]] goes down and he hears 'bring me the flower and this can all be a bad dream'
+
+[[Raphael King Ambrosius Costeau|King]] wakes up with a start.
+
+Talk with [[Raphael King Ambrosius Costeau|King]] about his dream, lets [[Sam Slippy Robbins|Sam]] know about his sick parents and the [[Winter Lotus]] being useful for his parents the same one that [[Zari]] is looking for, for the [[Velvin Thicket]].
+
+[[Sulk]] sleeps weird with his butt in the air.
+
+[[Sulk]] gives [[Zari]] the [[Boots of the Winterlands]] as a thank you for keeping him alive in battle with [[Captain Skath]].
 
 **Next:**
 
@@ -38,4 +73,6 @@ Conversation between [[Zassteeah Zass Maryis|Zaas]] and [[Raphael King Ambrosius
 
 
 **Timeline**
- [[202206182149 - Ambush Skath]] <--> 
+ [[202206182149 - Ambush Skath]] <--> [[202207092119 - Returning the Cauldron]]
+
+<span class='ob-timelines' data-date='1514-03-28-00' data-title="Chasing Skath"></span>
