--- a/_notes/Encounters/202204162314 - The Skath Hunt.md
+++ b/_notes/Encounters/202204162314 - The Skath Hunt.md
@@ -1,6 +1,6 @@
 ---
 title: "Encounter: The Skath Hunt"
-tags: [encounter]
+tags: [encounter, timeline]
 menu: Encounters
 ---
 **Objective:** Find [[Captain Skath]] or find where the [[Cauldron of Plenty]] is being held
@@ -23,3 +23,5 @@ menu: Encounters
 
 **Timeline**
  [[202204162240 - Zaas and Naerth Discussion]] <--> [[202204232033 - Skaths House Investigation]]
+ 
+<span class='ob-timelines' data-date='1505-03-28-00' data-title="The Skath Hunt"></span>
