--- a/_notes/Encounters/202207022143 - Chasing Skath.md
+++ b/_notes/Encounters/202207022143 - Chasing Skath.md
@@ -46,13 +46,13 @@ Conversation between [[Zassteeah Zass Maryis|Zaas]] and [[Raphael King Ambrosius
 
 "See, perfect pictures of health" - mademoiselle
 
-[[Jacqueline]] is mademoiselle.
+[[Jacqueline Renier]] is mademoiselle.
 
 Both parents let out a scream, hair starts popping out of their forearms, they have lycanthropy, wererats
 
 Dream continues after [[Raphael King Ambrosius Costeau|King]] is assaulted by his parents in wererat form and the [[Silent Helm]]s
 
-He transports to [[Castile Renee]] in the dream
+He transports to [[Castile Renier]] in the dream
 
 [[Raphael King Ambrosius Costeau|King]] goes down and he hears 'bring me the flower and this can all be a bad dream'
 
