--- a/_notes/Encounters/202301281120 - Get That Sign!.md
+++ b/_notes/Encounters/202301281120 - Get That Sign!.md
@@ -36,4 +36,4 @@ Find [[Alley]] and [[Calley]]'s stolen [[Chardalyn]] sign
 - Clear combat
 
 **Timeline**
- [[202211201615 - We Have a Cult!]] <--> 
+ [[202211201615 - We Have a Cult!]] <--> [[202302191305 - Fort Duergar]]
