--- a/_notes/Encounters/202302191305 - Fort Duergar.md
+++ b/_notes/Encounters/202302191305 - Fort Duergar.md
@@ -33,4 +33,4 @@ Survive
 - [[Sam Slippy Robbins|Sam]] pulls a shadow sword out of one of [[Raphael King Ambrosius Costeau]]'s rats
 
 **Timeline**
-[[202301281120 - Get That Sign!]] <--> 
+[[202301281120 - Get That Sign!]] <--> [[202303051347 - Orcs Hurt]]
